WIP: migrate to reactive code. App is now broken